Small fixes in the text

--- a/index.html
+++ b/index.html
@@ -94,7 +94,6 @@
           <h1>AI-driven smart drip irrigation for Uzbekistan</h1>
           <p class="lead">Reduce water use, keep yields stable — a field-scale system combining IoT sensors, LPWAN gateways, solenoid valves and ML forecasting to irrigate only when crops need it.</p>
           <div class="cta">
-            <button class="btn" onclick="downloadHTML()">Download HTML</button>
             <button class="btn secondary" onclick="scrollTo('#roadmap')">See Roadmap</button>
           </div>
 
@@ -105,7 +104,7 @@
           </div>
 
           <hr style="border:none;height:1px;background:rgba(255,255,255,0.02);margin:16px 0">
-          <p class="small">Built by a 5-person team combining hardware, AI, cloud, agronomy and field testing expertise.</p>
+          <p class="small">Built by a motivated team of young specialists in hardware, AI, cloud, and agronomy — united by the mission to drive meaningful global change.</p>
         </div>
 
         <aside>
@@ -154,12 +153,12 @@
           <div class="member card">
             <div style="font-weight:800">Temur Kadirov</div>
             <div class="role">Team Lead / System Architect</div>
-            <p class="small">IoT design, LPWAN, edge compute. Links: <a href="#">GitHub</a> • <a href="#">LinkedIn</a></p>
+            <p class="small">IoT design, LPWAN, edge compute. Links:<a href="http://linkedin.com/in/temur-kadirov-b43967310">LinkedIn</a></p>
           </div>
           <div class="member card">
             <div style="font-weight:800">Omar Karimov</div>
             <div class="role">AI / ML Engineer</div>
-            <p class="small">LSTM & GBM models, feature engineering, PyTorch. Links: <a href="#">GitHub</a></p>
+            <p class="small">LSTM & GBM models, feature engineering, PyTorch. </p>
           </div>
           <div class="member card">
             <div style="font-weight:800">Shamirzayev Usmon</div>
