--- a/index.html
+++ b/index.html
@@ -107,6 +107,13 @@
         grid-template-columns: repeat(2, 1fr)
       }
     }
+    
+    @media (min-width:1200px) {
+    	.wrap {
+   			padding-left:300px;
+    		padding-right:300px;
+  		}
+		}
 
     @media(max-width:560px) {
       .team-grid {
@@ -252,13 +259,13 @@
     <section class="card hero-carousel desktop-only">
       <div class="carousel-container">
         <div class="carousel-slide fade">
-          <img src="assets/irr1.PNG" alt="Image 1">
+          <img src="assets/images/irr1.png" alt="Image 3">
         </div>
         <div class="carousel-slide fade">
-          <img src="assets/irr2.png" alt="Image 2">
+          <img src="assets/images/irr2.png" alt="Image 3">
         </div>
         <div class="carousel-slide fade">
-         <img src="assets/irr.png" alt="Image 3">
+         <img src="assets/images/irr.png" alt="Image 3">
         </div>
 
         <!-- navigation arrows -->
