--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title data-i18n="meta_title">AgroAI — Smart Drip Irrigation for Uzbekistan</title>
   <meta name="description"
     content="AI-driven soil‑moisture forecasting and automated irrigation control for Uzbekistan’s water‑stressed agriculture.">
+  
   <!-- Load Inter font globally -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -258,28 +259,28 @@
     <section class="card hero-carousel desktop-only" style="margin-top:40px;">
       <div class="carousel-container">
         <div class="carousel-slide fade">
-          <img src="assets/images/image1.png" alt="Image 1">
+          <img src="assets/image1.png" alt="Image 1">
         </div>
         <div class="carousel-slide fade">
-          <img src="assets/images/image2.png" alt="Image 2">
+          <img src="assets/image2.png" alt="Image 2">
         </div>
         <div class="carousel-slide fade">
-          <img src="assets/images/image3.png" alt="Image 3">
+          <img src="assets/image3.png" alt="Image 3">
         </div>
         <div class="carousel-slide fade">
-          <img src="assets/images/image4.png" alt="Image 4">
+          <img src="assets/image4.png" alt="Image 4">
         </div>
         <div class="carousel-slide fade">
-          <img src="assets/images/image5.png" alt="Image 5">
+          <img src="assets/image5.png" alt="Image 5">
         </div>
         <div class="carousel-slide fade">
-          <img src="assets/images/image6.png" alt="Image 6">
+          <img src="assets/image6.png" alt="Image 6">
         </div>
         <div class="carousel-slide fade">
-          <img src="assets/images/image7.png" alt="Image 7">
+          <img src="assets/image7.png" alt="Image 7">
         </div>
         <div class="carousel-slide fade">
-          <img src="assets/images/image8.png" alt="Image 8">
+          <img src="assets/image8.png" alt="Image 8">
         </div>
 
         <!-- navigation arrows -->
@@ -498,7 +499,7 @@ Our AI-powered irrigation system delivers precision watering, reducing consumpti
       <h2>📞 Contact & Next Steps</h2>
       <h3>We are actively seeking:</h3>
       <ul class="small clean">
-        <li><b>Pilot patrtners</b> for our 1‑ha est site</li>
+        <li><b>Pilot patrtners</b> for our 1‑ha test site</li>
         <li><b>Government cooperation</b> with Ministry of Agriculture & Water Resources</li>
         <li><b>Investment</b> to scale to full regional deployment</li>
         <li><b>Research partnerships </b>in agronomy and AI</li>
